--- a/Hamstore/app/src/main/res/layout/ac_chao.xml
+++ b/Hamstore/app/src/main/res/layout/ac_chao.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AC_Chao">
+    tools:context=".Activity.Login.AC_Chao">
 
     <ImageView
         android:id="@+id/imageView"
