--- a/Hamstore/app/src/main/res/layout/ac_thanh_toan.xml
+++ b/Hamstore/app/src/main/res/layout/ac_thanh_toan.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="5dp"
-    tools:context=".AC_thanh_toan">
+    tools:context=".Activity.Users.AC_thanh_toan">
 
     <LinearLayout
         android:layout_width="match_parent"
