--- a/Hamstore/app/src/main/res/layout/fragment_admin_list_khong_them.xml
+++ b/Hamstore/app/src/main/res/layout/fragment_admin_list_khong_them.xml
@@ -9,6 +9,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:layout_margin="5dp"
         >
 
