--- a/Hamstore/app/src/main/res/layout/fragment_thong_tin.xml
+++ b/Hamstore/app/src/main/res/layout/fragment_thong_tin.xml
@@ -1,91 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_margin="20dp">
 
-    <ImageView
-        android:id="@+id/img_avt"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/googleg_standard_color_18" />
-
-    <TextView
-        android:id="@+id/tv_ho_ten"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="80dp"
-        android:text="Họ tên"
-        android:textSize="22dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/img_avt"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tvThongTinCaNhan"
-        android:layout_width="wrap_content"
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/img_avt"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/img_avt"
+            app:riv_corner_radius="20dp" />
+
+
+        <TextView
+            android:id="@+id/tv_ho_ten"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:text="Họ tên"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="60dp"
-        android:text="Thông tin cá nhân"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_avt" />
+        android:orientation="horizontal"
+        android:layout_marginTop="40dp">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_avt"
-        app:srcCompat="@drawable/ic_person" />
-    <TextView
-        android:id="@+id/tvDoiMatKhau"
-        android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/img_thong_tin_ca_nhan"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/ic_person" />
+
+        <TextView
+            android:id="@+id/tv_thong_tin_ca_nhan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:text="Thông tin cá nhân"
+            android:textSize="20dp"
+            />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="120dp"
-        android:text="Đổi mật khẩu"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_avt" />
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="110dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_avt"
-        app:srcCompat="@drawable/key" />
-    <TextView
-        android:id="@+id/tv_dang_xuat"
-        android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/img_doi_mat_khau"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/key" />
+
+        <TextView
+            android:id="@+id/tv_doi_mat_khau"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:text="Đổi mật khẩu"
+            android:textSize="20dp"
+            />
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="180dp"
-        android:text="Đăng xuất"
-        android:textSize="20dp"
-        android:textColor="#E53935"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_avt" />
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
 
-    <ImageView
-        android:id="@+id/img_dang_xuat"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="170dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_avt"
-        app:srcCompat="@drawable/dangxuat" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/img_dang_xuat"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/dangxuat" />
+
+        <TextView
+            android:id="@+id/tv_dang_xuat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:text="Đăng xuất"
+            android:textColor="#E53935"
+            android:textSize="20dp"
+            />
+
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
