--- a/Hamstore/app/src/main/res/layout/trang_chu.xml
+++ b/Hamstore/app/src/main/res/layout/trang_chu.xml
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E3E3E3"
-    tools:context=".TrangChu"
+    tools:context=".Activity.Users.TrangChu"
     android:id="@+id/drawerLayout">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+
 
 
         <FrameLayout
             android:id="@+id/frameLayout"
             android:layout_width="match_parent"
-            android:layout_height="700dp"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:layout_above="@id/bottomNavigationView"
+            >
         </FrameLayout>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
             app:labelVisibilityMode="auto"
             app:itemRippleColor="#7CB342"
             app:menu="@menu/menu_bottomnavigation"
             />
 
-    </LinearLayout>
 
 
 
-</androidx.drawerlayout.widget.DrawerLayout>
+
+</RelativeLayout>
