trang_thai_hoa_don

--- a/Hamstore/app/src/main/res/layout/dialog_hoa_don_thoat.xml
+++ b/Hamstore/app/src/main/res/layout/dialog_hoa_don_thoat.xml
@@ -76,6 +76,27 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/textInputLayout7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="20dp"
+                    app:boxStrokeColor="#43A047"
+                    app:endIconMode="clear_text"
+                    app:hintTextColor="#43A047">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/inputEdit_thoi_gian"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Thời gian"
+                        android:focusable="false"
+                        android:inputType="text" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputLayout3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -167,7 +188,7 @@
                         android:layout_height="wrap_content"
                         android:hint="Trang thái"
                         android:focusable="false"
-                        android:textColor="#E53935"
+                        android:textColor="#00897B"
                         android:inputType="text" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -185,23 +206,13 @@
             android:weightSum="2">
 
             <Button
-                android:id="@+id/btn_da_thanh_toan"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/custom_btn_xanh"
-                android:text="Đã thanh toán"
-                app:backgroundTint="@null" />
-
-            <Button
-                android:id="@+id/btn_huy"
+                android:id="@+id/btn_thoat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/custom_khung_vien_xanh"
-                android:text="Hủy"
+                android:text="Thoát"
                 android:textColor="#00897B"
                 app:backgroundTint="@null" />
 
