--- a/Hamstore/app/src/main/res/layout/fragment_tablayout_viewpager.xml
+++ b/Hamstore/app/src/main/res/layout/fragment_tablayout_viewpager.xml
@@ -9,6 +9,7 @@
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:tabMode="scrollable"
         app:tabSelectedTextColor="#00897B"/>
 
     <androidx.viewpager.widget.ViewPager
