--- a/Hamstore/app/src/main/res/layout/fragment_admin_thong_ke_doanh_thu.xml
+++ b/Hamstore/app/src/main/res/layout/fragment_admin_thong_ke_doanh_thu.xml
@@ -22,7 +22,7 @@
             android:id="@+id/inputEdit_tu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Từ"
+            android:hint="Từ dd/mm/yyyy"
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -41,7 +41,7 @@
             android:id="@+id/inputEdit_den"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Đến"
+            android:hint="Đến dd/mm/yyyy"
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -95,15 +95,19 @@
             />
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/recyclerView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_margin="5dp"-->
+<!--        >-->
+
+<!--    </androidx.recyclerview.widget.RecyclerView>-->
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/barChart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        >
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-
+        android:layout_margin="10dp"/>
 
 </LinearLayout>
