--- a/Hamstore/app/src/main/res/layout/fragment_admin_thong_ke_doanh_thu.xml
+++ b/Hamstore/app/src/main/res/layout/fragment_admin_thong_ke_doanh_thu.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Từ dd/mm/yyyy"
+            android:focusable="false"
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -42,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Đến dd/mm/yyyy"
+            android:focusable="false"
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
