--- a/Hamstore/app/src/main/res/layout/ac_dang_ki_otp.xml
+++ b/Hamstore/app/src/main/res/layout/ac_dang_ki_otp.xml
@@ -38,61 +38,36 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputEdit_tai_khoan"
+            android:id="@+id/inputEdit_otp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Tài khoản"
-            android:inputType="text" />
+            android:hint="Mã OTP"
+            android:inputType="number" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:boxStrokeColor="#43A047"
-        app:endIconMode="password_toggle"
-        app:hintTextColor="#43A047"
-        >
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputEdit_mat_khau_1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Mật khẩu"
-            android:inputType="textPassword" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:endIconMode="password_toggle"
-        app:boxStrokeColor="#43A047"
-        app:hintTextColor="#43A047"
-        >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputEdit_mat_khau_2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Nhập lại mật khẩu"
-            android:inputType="textPassword" />
-
-    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btn_tao_tai_khoan"
+        android:id="@+id/btn_xac_nhan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_btn_xanh"
         app:backgroundTint="@null"
-        android:text="Tạo tài khoản"
+        android:text="Xác nhận"
         android:textSize="18dp"
         android:layout_marginTop="36dp"
         />
 
+    <TextView
+        android:id="@+id/tv_gui_lai_otp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="15dp"
+        android:textSize="20dp"
+        android:textColor="#1E88E5"
+        android:text="Gửi lại mã OTP" />
 
 
 </LinearLayout>
