--- a/Hamstore/app/src/main/res/layout/ac_dang_nhap.xml
+++ b/Hamstore/app/src/main/res/layout/ac_dang_nhap.xml
@@ -68,6 +68,7 @@
         android:background="@drawable/custom_btn_xanh"
         app:backgroundTint="@null"
         android:text="Đăng nhập"
+        android:textSize="18dp"
         android:layout_marginTop="36dp"
         />
 
