--- a/Hamstore/app/src/main/res/drawable/custom_btn_xanh.xml
+++ b/Hamstore/app/src/main/res/drawable/custom_btn_xanh.xml
@@ -1,12 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<shape xmlns:android="http://schemas.android.com/apk/res/android">-->
 
-    <solid
-        android:color="#43A047"
-        />
+<!--    <solid-->
+<!--        android:color="#43A047"-->
+<!--        />-->
 
-    <corners
-        android:radius="15dp"
-        />
+<!--    <corners-->
+<!--        android:radius="15dp"-->
+<!--        />-->
 
-</shape>
+<!--</shape>-->
+    <!-- button_inner_shadow.xml -->
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<!-- Shape nền của button -->
+<item>
+    <shape android:shape="rectangle">
+        <solid android:color="#92D53E" />
+        <corners android:radius="30dp" />
+    </shape>
+</item>
+<!-- Shape của đổ bóng bên trong button -->
+<item android:left="4dp" android:top="4dp" android:right="4dp" android:bottom="4dp">
+    <shape android:shape="rectangle">
+        <solid android:color="#33000000" /> <!-- Màu của đổ bóng -->
+        <corners android:radius="26dp" />
+    </shape>
+</item>
+</layer-list>
