--- a/Hamstore/app/src/main/res/layout/ac_chao.xml
+++ b/Hamstore/app/src/main/res/layout/ac_chao.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".Activity.Login.AC_Chao">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="900dp"
+        android:layout_marginTop="-20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_hamstore" />
+        app:srcCompat="@drawable/img_man_hinh_chao" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
