--- a/Hamstore/app/src/main/res/layout/fragment_trangchu_2hang.xml
+++ b/Hamstore/app/src/main/res/layout/fragment_trangchu_2hang.xml
@@ -2,14 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_margin="5dp"
-    >
+    android:layout_margin="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/img_back"
@@ -21,18 +20,29 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_weight="1"
             android:gravity="center"
+            android:layout_weight="1"
+            android:paddingLeft="-40dp"
             android:textSize="25dp"
             android:textStyle="bold"
             android:text="title" />
 
-        <ImageView
-            android:id="@+id/img_search"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_search" />
+<!--        <ImageView-->
+<!--            android:id="@+id/img_search"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:src="@drawable/ic_search" />-->
+
     </LinearLayout>
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:iconifiedByDefault="false"
+        android:queryHint="Search..."
+        />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_2hang"
@@ -41,4 +51,6 @@
         android:layout_margin="10dp"
         android:layout_marginTop="20dp"
         />
+
+
 </LinearLayout>
