+84_thong_bao_check_login

--- a/Hamstore/app/src/main/res/layout/ac_dang_ki_sdt.xml
+++ b/Hamstore/app/src/main/res/layout/ac_dang_ki_sdt.xml
@@ -41,8 +41,8 @@
             android:id="@+id/inputEdit_sdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Số điện thoại (+84)"
-            android:inputType="text" />
+            android:hint="Số điện thoại"
+            android:inputType="number" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
