--- a/Hamstore/app/src/main/res/layout/ac_dang_nhap.xml
+++ b/Hamstore/app/src/main/res/layout/ac_dang_nhap.xml
@@ -72,6 +72,14 @@
         android:layout_marginTop="36dp"
         />
 
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="16sp"
+        android:text="Ghi nhớ tài khoàn" />
+
     <TextView
         android:id="@+id/tv_quen_mat_khau"
         android:layout_width="match_parent"
@@ -79,7 +87,7 @@
         android:text="Quên mật khẩu?"
         android:textColor="#FF0000"
         android:gravity="center"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="10dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
